# ALORFBIOMED

./: .env  .env.example  .env22  .gitignore  .vercelignore  AGENTS.md  EDIT_DELETE_FUNCTIONALITY_INVESTIGATION_REPORT.md  EQUIPMENT_HISTORY_MANAGEMENT_FEATURES.md  FIXES_AND_INSTRUCTIONS.md  HISTORY_FEATURES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MAILJET_SETUP.md  PERMISSIONS_REVIEW_REPORT.md  README.md  UI_UX_IMPROVEMENTS_SUMMARY.md  URL_ENCODING_SOLUTION_SUMMARY.md  cookie.txt  create_admin.py  create_tables.py  devserver.sh  final_comprehensive_fix.py  final_verification_test.py  fix_email_configuration.py  fix_vapid_keys.py  generate_new_vapid_keys.py  init_db.py  new_session_cookie.txt  populate_initial_data.py  populate_roles_permissions.py  pyproject.toml  requirements-vercel.txt  requirements.txt  requirements_clean.txt  requirements_minimal.txt  run.sh  setup_email_config.py  test_authentication.py  test_comprehensive_system.py  test_direct_api.py  test_email_features.py  (+14 more)
api/: index.py
app/: __init__.py  config.py  constants.py  decorators.py  list_users.py  main.py
data/: audit_log.json  departments_and_machines.json  equipment_history.json  ocm.json  ppm.json  ppm_corrupted_backup.json  settings.json  training.json
data_before_restore_20250627_235649/: audit_log.json  ppm.json  push_subscriptions.json  training.json.backup_20250622_070845  training.json.backup_20250622_110239  training_backup_20250622_061710.json.backup_20250622_070845
tests/: conftest.py  test_admin_api.py  test_api.py  test_models.py  test_ppm_logic.py  test_routes.py  test_services.py  (+1 more)
(+95 files in other folders)
